# zksync-telemetry

./: Cargo.toml  Example.md  README.md
src/: config.rs  error.rs  keys.rs  lib.rs  properties.rs  telemetry.rs  utils.rs
