[package]
name = "zksync_telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = { version = "0.4.38", features = ["serde"] }
directories = "5.0.1"
once_cell = "1.20.3"
posthog-rs = { git = "https://github.com/Romsters/posthog-rs", rev = "a54b1423100beaaa5d7eb43ff801f4b8389f9550", features = ["async-client"] }
sentry = { version = "0.35.0", default-features = false, features = ["reqwest", "rustls", "test"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.4"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.14.0"
tokio = { version = "1.43.0", features = ["full"] }
